--- a/cursos.html
+++ b/cursos.html
@@ -65,7 +65,7 @@
 									<a href="CURSOS/curso_adm.html"><img src="CURSOS/img_cursos/adm.jpg" alt="Curso de Administração"/></a><br/><br/>
 									<h3>Administração</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Inteligência de Negócios e Gestão de Projetos</p>
 								<p><a href="#">Matricule-se Já!</p></a>
 							</div>
 						</section>
