--- a/cursos.html
+++ b/cursos.html
@@ -77,7 +77,7 @@
 									<h4>Análise e Desenvolvimento de Sistemas</h4>
 								</header>
 								<br/>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>IoT,DevOps & Mobile</p>
 								<p><a href="#">Matricule-se Já!</p></a>
 							</div>
 						</section>
