--- a/CURSOS/curso_adm.html
+++ b/CURSOS/curso_adm.html
@@ -57,7 +57,7 @@
 						<div class="inner">
 							<div class="content">
 								<header>
-									<h2>Curso de Administração</h2>
+									<h2>Administração</h2>
 								</header>
 								<p>Voltado para as exigências do mercado de trabalho, o curso de Administração da FANTEC aborda de forma ampla o universo corporativo.<br> 
 									O aluno irá aprender a definir as melhores estratégias para o bom funcionamento das empresas, gerar lucros, controlar gastos e se destacar com qualidade entre os concorrentes.<br>  
