--- a/CURSOS/curso_ads.html
+++ b/CURSOS/curso_ads.html
@@ -57,7 +57,7 @@
 						<div class="inner">
 							<div class="content">
 								<header>
-									<h2>Curso de Análise e Desenvolvimento de Sistemas</h2>
+									<h2>Análise e Desenvolvimento de Sistemas</h2>
 								</header>
 								<p>Este curso é voltado para a criação de softwares, sistemas para empresas e programas. <br> 
 									Entre os aprendizados desta graduação também estão as etapas do projeto de sistemas de software, como por exemplo: análise, projeto, teste, gestão, implantação e manutenção de sistemas de informação. O aluno formado pela FANTEC pode atuar no mercado de trabalho como: Analista de desenvolvimento, Analista de teste, Analista de requisitos ou de negócios.</p>
