--- a/CURSOS/curso_bd.html
+++ b/CURSOS/curso_bd.html
@@ -57,14 +57,13 @@
 						<div class="inner">
 							<div class="content">
 								<header>
-									<h2>Curso de Banco de Dados</h2>
+									<h2>Banco de Dados</h2>
 								</header>
-								<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
-								<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
-								<hr />
-								<h3>Magna odio tempus commodo</h3>
-								<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
-								<p>Felis sagittis eget tempus primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Magna sed etiam ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus lorem ipsum dolor sit amet nullam.</p>
+								<p>Neste curso, o aluno será preparado para atuar com diversas plataformas e estruturas de desenvolvimento e administração de sistemas  de Banco de Dados. <br> 
+								<p>Esta graduação frisa a importância da segurança de compartilhamento de dados nas empresas modernas e o aluno aprende as melhores técnicas e ferramentas de criação e implementação das mesmas.<br> 
+								<h3>Mercado de trabalho</h3>
+								<p>Pelo fato de, hoje em dia, as empresas utilizarem algum sistema informatizado, sempre terão a necessidade de um profissional para administrá-lo. Com isso, o mercado de trabalho para esta área se mantém aquecido, com uma demanda muito alta por profissionais qualificados. Na maioria das vezes, garante ótimas remunerações.</p>
+								<p>Dependendo da formação e do tempo de experiência, este profissional poderá assumir diferentes cargos em empresas dos mais diversos setores. Veja alguns exemplos: Administrador de Banco de Dados (DBA), Consultor de Banco de Dados, Analista de Dados, Analista de Suporte, Desenvolvedor de Projetos de Banco de Dados e Gerente de Sistemas de Bancos de Dados.</p>
 							</div>
 						</div>
 					</section>
