--- a/cursos.html
+++ b/cursos.html
@@ -88,7 +88,7 @@
 									<a href="CURSOS/curso_bd.html"><img src="CURSOS/img_cursos/bd.jpg" alt="Curso de Banco de Dados"/></a></br></br>
 									<h3>Banco de Dados</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Big data e Data Analytics.</p>
 								<p><a href="#">Matricule-se Já!</p></a>
 							</div>
 						</section>
