--- a/CURSOS/curso_engenharia.html
+++ b/CURSOS/curso_engenharia.html
@@ -59,14 +59,14 @@
 						<div class="inner">
 							<div class="content">
 								<header>
-									<h2>Curso de Engenharia da Computação</h2>
+									<h2> Engenharia da Computação</h2>
 								</header>
-								<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
-								<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
+								<p>O aluno será capacitado para desenvolver sistemas para Internet das Coisas e Indústria 4,0 a partir de sólidos conhecimentos de programação, redes de comunicação, hardware e eletrônica que são foco de várias disciplinas da grade. Além disso, temas como Inovação, Empreendedorismo, Gestão e Economia também farão parte da formação do futuro engenheiro. </p>
+								<p>O curso foi projetado em uma linha de formação com ênfase em IoT e Indústria 4.0, temas atuais e de interesse mundial, todos os setores da economia serão impactados por essas transformações digitais nos próximos anos. </p>
 								<hr />
-								<h3>Magna odio tempus commodo</h3>
-								<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
-								<p>Felis sagittis eget tempus primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Magna sed etiam ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus lorem ipsum dolor sit amet nullam.</p>
+								<h3>Mercado de trabalho</h3>
+								<p>O mercado de trabalho tende a ter uma demanda cada vez maior pelo profissional formado em Engenharia da Computação devido ao aumento do nível de automatização e informatização da sociedade moderna. </p>
+								<p>Entre as áreas de maior contratação, encontra-se a de Big Data, mas empresas de diferentes setores buscam por engenheiros da computação para desenvolver sistemas digitais, computadorizados e robôs.</p>
 							</div>
 						</div>
 					</section>
