--- a/acesso.html
+++ b/acesso.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Página de Acesso - Fantec</title>
+		<link rel="shortcut icon" href="./images/logo.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
