--- a/cursos.html
+++ b/cursos.html
@@ -135,7 +135,7 @@
 									<a href="CURSOS/curso_producao.html"><img src="CURSOS/img_cursos/producao.jpg" alt="Curso de Produção Miltimídia"/></a></br></br>
 									<h3>Produção Multimídia</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Web Design, Audiovisual & Design Digital</p>
 								<p><a href="#">Matricule-se Já!</p></a>
 							</div>
 						</section>
@@ -146,7 +146,7 @@
 									<a href="CURSOS/curso_redes.html"><img src="CURSOS/img_cursos/redes.jpg" alt="Curso de Redes de Computadores"/></a></br></br>
 									<h3>Redes de Computadores</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Iot, Cloud & Infra</p>
 								<p><a href="#">Matricule-se Já!</p></a>
 							</div>
 						</section>
@@ -157,7 +157,7 @@
 									<a href="CURSOS/curso_sistemas.html"><img src="CURSOS/img_cursos/sistemas.jpg" alt="Curso de Sistemas de Informação"/></a></br></br>
 									<h3>Sistemas de Informação</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Engenharia de Software & Inteligência Artificial</p>
 								<p><a href="#">Matricule-se Já!</p></a>
 							</div>
 						</section>
