--- a/CURSOS/curso_sistemas.html
+++ b/CURSOS/curso_sistemas.html
@@ -57,14 +57,13 @@
 						<div class="inner">
 							<div class="content">
 								<header>
-									<h2>Curso de Sistemas da Informação</h2>
+									<h2>Sistemas da Informação</h2>
 								</header>
-								<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
-								<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
+<p>O objetivo é formar profissionais capazes de atuar na área de Tecnologia da Informação, criando práticas tecnológicas para determinar o fluxo de informações com o desenvolvimento de software e no gerenciamento de sistemas informatizados. O aluno aprenderá os conceitos teóricos e usos práticos da área, irá acompanhar as principais inovações tecnológicas do mercado e habilitar a sua capacidade empreendedora.</P>
+								<P>A grade foi desenvolvida para que, desde o primeiro ano, os alunos recebam a base necessária para atuarem na área de TI de grandes empresas, resolvendo problemas por meio de raciocínio lógico e buscando solução para os desafios das organizações.</P>
 								<hr />
-								<h3>Magna odio tempus commodo</h3>
-								<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
-								<p>Felis sagittis eget tempus primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Magna sed etiam ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus lorem ipsum dolor sit amet nullam.</p>
+								<h3>O Mercado de Trabalho</h3>
+								<p>O mercado continua aquecido e está em expansão devido ao crescente acesso das pessoas à banda larga no País e fora dele.<BR> O profissional desta área pode atuar em qualquer tipo de empresa de quase todos os setores, de bancos e organizações de saúde a empresas públicas e de comércio eletrônico. Alguns cargos que a graduação pode gerar são: Analista de Sistemas, Administrador de Dados, Gerente de Sistemas e Processos de Gerente de TI.</p>
 							</div>
 						</div>
 					</section>
