--- a/CURSOS/curso_redes.html
+++ b/CURSOS/curso_redes.html
@@ -57,7 +57,7 @@
 						<div class="inner">
 							<div class="content">
 								<header>
-									<h2>Curso de Redes de Computadores</h2>
+									<h2>Redes de Computadores</h2>
 								</header>
 								<p>É ministrado em um ambiente que simula uma empresa real, com computadores (SO Linux e Windows), roteadores, switches, cabeamento e demais equipamentos, trazendo a vivência que você precisa para ser competitivo no mercado de trabalho.</p>
 								<p>Você vai aprender a dimensionar o uso de equipamentos multiusuários. Configurar acesso e disponibilidade para internet e intranet, roteadores e provedores. Trabalhar com sistemas de gerenciamento de redes, sistemas operacionais e simulação de ambiente de Cloud Computing. E com os novos conhecimentos sobre hardware, software e modos de funcionamento, também vai ser capaz de otimizar o desempenho dos computadores, adequando a estrutura física ao seu potencial de produção, o que aumenta o desempenho. Tudo isso de acordo com as regras de segurança.</p>
