--- a/CURSOS/curso_producao.html
+++ b/CURSOS/curso_producao.html
@@ -57,14 +57,13 @@
 						<div class="inner">
 							<div class="content">
 								<header>
-									<h2>Curso de Produção Multimídia</h2>
+									<h2>Produção Multimídia</h2>
 								</header>
-								<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
-								<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
+								<p>O curso de Produção Multimídia é voltado para os setores criativos, oferecendo ensino de qualidade e disciplinas focadas nas demandas atuais e futuras do crescente mercado das mídias convergentes (imagem, som e texto).</p>
+								<p>O conhecimento adquirido no curso poderá ser aplicado em projetos no mercado de comunicação visual, direção de arte, design gráfico, criação de apps, conteúdos digitais para internet, infográficos, ilustração, comunicação interativa impressa e eletrônica, animações 2D e 3D, interfaces gráficas para WEB ou para dispositivos digitais mobile, entre outros.</p>
 								<hr />
-								<h3>Magna odio tempus commodo</h3>
-								<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
-								<p>Felis sagittis eget tempus primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Magna sed etiam ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus lorem ipsum dolor sit amet nullam.</p>
+								<h3>O Mercado de Trabalho</h3>
+								<p>Com a constante evolução tecnológica da indústria multimídia e digital, o mercado de trabalho cresce exponencialmente para este profissional apto.<br>Uma das principais vantagens de uma carreira na área de Produção Multimídia é toda a variedade de oportunidades disponíveis, desde home office à agências de comunicação e marketing, produtoras de cinema e vídeo, terceiro setor, emissoras de TV e assessorias de comunicação, que são alguns dos segmentos que mais buscam o produtor multimídia, além do espaço que a internet proporciona.</p>
 							</div>
 						</div>
 					</section>
