--- a/CURSOS/curso_sistemas.html
+++ b/CURSOS/curso_sistemas.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>FANTEC - Faculdade Tecnológica</title>
+		<link rel="shortcut icon" href="./img_cursos/logo.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -44,11 +45,10 @@
 			</section>-->
 
 		<!-- Highlights -->
-			<section class="wrapper">
-				<div class="inner">
-					<header class="special">
 						<!--<h2>Rede União Farma Cidade Kemel II</h2>-->
-						<img src="../images/logo_uniao_farma.png" alt="Rede União Farma" />
+						<div id="heading" >
+							<h1 style="text-content:center;"><img src="img_cursos/logo_uniao_farma.png" alt="Rede União Farma" /></h1>
+						</div>
 						<!-- <br/><br/><br/> -->
 						<!-- <p>Confira nossas promoções:</p> -->
 					</header>
