--- a/CURSOS/curso_engenharia.html
+++ b/CURSOS/curso_engenharia.html
@@ -46,7 +46,9 @@
 
 		<!-- Highlights -->
 						<!--<h2>Rede União Farma Cidade Kemel II</h2>-->
-						
+						<div id="heading" >
+							<h1 style="text-content:center;"><img src="img_cursos/logo_uniao_farma.png" alt="Rede União Farma" /></h1>
+						</div>
 						<!-- <br/><br/><br/> -->
 						<!-- <p>Confira nossas promoções:</p> -->
 					</header>
