Alterações na pag cursos.html

--- a/cursos.html
+++ b/cursos.html
@@ -111,7 +111,7 @@
 									<a href="CURSOS/curso_gestao.html"><img src="CURSOS/img_cursos/gestao.jpg" alt="Curso de Gestão de Projetos"/></a></br></br>
 									<h3>Gestão de Projetos</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>ERP & Gestão e Qualidade</p>
 								<p><a href="#">Matricule-se Já!</p></a>
 							</div>
 						</section>
@@ -122,7 +122,7 @@
 									<a href="CURSOS/curso_jogos.html"><img src="CURSOS/img_cursos/jogos.jpg" alt="Curso de Jogos Digitais"/></a></br></br>
 									<h3>Jogos Digitais</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Design de Games e Game Programming</p>
 								<p><a href="#">Matricule-se Já!</p></a>
 							</div>
 						</section>
